--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 my:
    greeting: Hello World from sayali
    list:
-      values: One, Two, Three
+      values: One, Two, Three, Four
       
 db:
    connection: connection-string-here-from-config
